# Trading-Agent

./: .gitignore  README.md  SOUL.md  behavior.md  pyproject.toml  requirements.txt
docs/: architecture.md
docs/diagrams/: trading_agent_class_diagram.puml
memory/short/: latest.json
memory/short/archive/: short_memory_20260224T192553Z_34c87a05.json  short_memory_20260224T193127Z_e28a23de.json  short_memory_20260224T194108Z_0da0d660.json  short_memory_20260224T200641Z_c52d85ae.json  short_memory_20260224T201056Z_83e5b388.json  short_memory_20260224T204806Z_878a819c.json  short_memory_20260224T205124Z_5bedcec9.json
prompts/: default_loop_prompt.txt
scripts/: test_alpaca_order.py  test_perplexity_market_snapshot.py  test_tavily_search.py  test_yfinance_market.py
src/agent_trade_sdk/: __init__.py  agent.py  config.py  memory_architecture.py  post_run_memory.py  reflection_memory.py  runner.py  session_log.py  source_quality.py  strategy_guardrails.py  tracing_support.py
src/agent_trade_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_trade_sdk/tools/: __init__.py  market_data.py  perplexity_snapshot.py  search.py  symbol_validation.py  trading.py
tests/: test_clock_tool.py  test_memory_architecture.py  test_perplexity_snapshot.py  test_reflection_memory.py  test_runner_tracing_payload.py  test_source_quality.py  test_strategy_guardrails.py  test_symbol_validation.py
